(NO FUNCIONA) falta que recoja aporte y arreglar el tema de las fechas